--- a/index.html
+++ b/index.html
@@ -385,8 +385,10 @@
           }
         };
 
-        const ctx = document.getElementById(canvasId).getContext('2d');
-        if (ctx._chartInstance) ctx._chartInstance.destroy();
+        const canvas = document.getElementById(canvasId);
+        const existing = Chart.getChart(canvas);
+        if (existing) existing.destroy();
+        const ctx = canvas.getContext('2d');
 
         const chart = new Chart(ctx, {
           type: 'scatter',
@@ -449,7 +451,7 @@
           plugins: [dumbbellPlugin]
         });
 
-        ctx._chartInstance = chart;
+        // Chart.js keeps a reference internally, so no manual tracking needed
       }
 
       const LABELS = {
