--- a/index.html
+++ b/index.html
@@ -801,29 +801,29 @@
           data.robust_stats,
           LABELS.robust_stats,
         );
-      if (data.velocity)
-        addCard("otherCards", "Velocidad", data.velocity, LABELS.velocity);
+      //if (data.velocity)
+      //  addCard("otherCards", "Velocidad", data.velocity, LABELS.velocity);
       if (data.recency)
         addCard("otherCards", "Recencia", data.recency, LABELS.recency);
       if (data.novelty)
         addCard("otherCards", "Novedad", data.novelty, LABELS.novelty);
-      if (data.type_freq)
-        addCard("otherCards", "Frecuencia por tipo", data.type_freq);
-      if (data.type_group_freq)
-        addCard(
-          "otherCards",
-          "Frecuencia por grupo de tipo",
-          data.type_group_freq,
-        );
+      //if (data.type_freq)
+      //  addCard("otherCards", "Frecuencia por tipo", data.type_freq);
+      //if (data.type_group_freq)
+      //  addCard(
+      //    "otherCards",
+       //   "Frecuencia por grupo de tipo",
+       //   data.type_group_freq,
+       // );
       if (data.roundness)
         addCard("otherCards", "Redondez", data.roundness, LABELS.roundness);
-      if (data.streaks)
-        addCard("otherCards", "Rachas", data.streaks, LABELS.streaks);
+      //if (data.streaks)
+      //  addCard("otherCards", "Rachas", data.streaks, LABELS.streaks);
       if (data.location)
         addCard("otherCards", "Ubicación", data.location, LABELS.location);
       if (data.flow) addCard("otherCards", "Flujo", data.flow, LABELS.flow);
-      if (data.coherence)
-        addCard("otherCards", "Coherencia", data.coherence, LABELS.coherence);
+      //if (data.coherence)
+      //  addCard("otherCards", "Coherencia", data.coherence, LABELS.coherence);
       if (data.status)
         addCard("otherCards", "Estado", data.status, LABELS.status);
       if (data.duplicates)
