--- a/index.html
+++ b/index.html
@@ -97,6 +97,35 @@
       </details>
     </footer>
 
+    <!-- Modal: Cargar datos -->
+    <div
+      id="loadModal"
+      class="fixed inset-0 bg-black/50 hidden items-center justify-center p-4 z-50"
+      aria-hidden="true"
+    >
+      <div class="bg-white rounded shadow max-w-3xl w-full p-0 overflow-hidden">
+        <div class="px-4 py-3 border-b flex items-center justify-between">
+          <h2 class="text-lg font-semibold">Cargar datos</h2>
+          <button id="loadCloseBtn" class="text-gray-500 hover:text-gray-700" aria-label="Cerrar">✕</button>
+        </div>
+        <div class="p-4 space-y-4">
+          <div>
+            <label for="featuresJsonInput" class="block text-sm font-medium mb-1">Features (JSON)</label>
+            <textarea id="featuresJsonInput" class="w-full border rounded p-2 font-mono text-sm h-48" placeholder="Pega aquí el JSON de features"></textarea>
+          </div>
+          <div>
+            <label for="txJsonInput" class="block text-sm font-medium mb-1">Transacción (JSON - opcional)</label>
+            <textarea id="txJsonInput" class="w-full border rounded p-2 font-mono text-sm h-32" placeholder="Por ahora no se utiliza"></textarea>
+          </div>
+          <p id="loadError" class="text-sm text-red-600 hidden"></p>
+        </div>
+        <div class="px-4 py-3 border-t flex items-center justify-end gap-2 bg-gray-50">
+          <button id="loadCancelBtn" class="px-4 py-2 rounded border bg-white hover:bg-gray-100">Cancelar</button>
+          <button id="loadConfirmBtn" class="px-4 py-2 rounded bg-blue-600 text-white hover:bg-blue-700">Cargar</button>
+        </div>
+      </div>
+    </div>
+
     <script>
       // Parse JSON from query param 'p'
       let data = {};
@@ -1040,6 +1069,14 @@
       }
       function setupSidebar() {
         const nav = document.getElementById('sidebarNav');
+        // Cargar datos button
+        const loadBtn = document.createElement('button');
+        loadBtn.type = 'button';
+        loadBtn.id = 'openLoadBtn';
+        loadBtn.className = 'w-full text-left px-4 py-2 hover:bg-gray-100 border-b';
+        loadBtn.textContent = 'Cargar datos';
+        nav.appendChild(loadBtn);
+
         const sections = [];
         if (sets && sets.global) sections.push(['global', 'Global']);
         if (sets && sets.by_direction && Object.keys(sets.by_direction).length) sections.push(['by-direction', 'Por dirección']);
@@ -1058,6 +1095,57 @@
         showSection(defaultKey);
       }
       setupSidebar();
+
+      // Modal handlers
+      (function setupLoadModal() {
+        const modal = document.getElementById('loadModal');
+        const openBtn = document.getElementById('openLoadBtn');
+        const closeBtn = document.getElementById('loadCloseBtn');
+        const cancelBtn = document.getElementById('loadCancelBtn');
+        const confirmBtn = document.getElementById('loadConfirmBtn');
+        const featuresInput = document.getElementById('featuresJsonInput');
+        const txInput = document.getElementById('txJsonInput');
+        const errorEl = document.getElementById('loadError');
+
+        function openModal() {
+          errorEl.classList.add('hidden');
+          errorEl.textContent = '';
+          try {
+            featuresInput.value = rawData && Object.keys(rawData).length ? JSON.stringify(rawData, null, 2) : '';
+          } catch (e) { featuresInput.value = ''; }
+          txInput.value = '';
+          modal.classList.remove('hidden');
+          modal.classList.add('flex');
+        }
+        function closeModal() {
+          modal.classList.add('hidden');
+          modal.classList.remove('flex');
+        }
+        function loadData() {
+          errorEl.classList.add('hidden');
+          errorEl.textContent = '';
+          const txt = featuresInput.value.trim();
+          if (!txt) { closeModal(); return; }
+          try {
+            const parsed = JSON.parse(txt);
+            const url = new URL(window.location.href);
+            url.searchParams.set('p', encodeURIComponent(JSON.stringify(parsed)));
+            window.location.href = url.toString();
+          } catch (e) {
+            errorEl.textContent = 'JSON inválido en Features: ' + (e?.message || e);
+            errorEl.classList.remove('hidden');
+          }
+        }
+
+        if (openBtn) openBtn.addEventListener('click', openModal);
+        if (closeBtn) closeBtn.addEventListener('click', closeModal);
+        if (cancelBtn) cancelBtn.addEventListener('click', closeModal);
+        if (confirmBtn) confirmBtn.addEventListener('click', loadData);
+        // Close on backdrop click
+        modal.addEventListener('click', (e) => { if (e.target === modal) closeModal(); });
+        // Escape to close
+        document.addEventListener('keydown', (e) => { if (e.key === 'Escape') closeModal(); });
+      })();
     </script>
   </body>
 </html>
